# graphql-example

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
GraphQLExample/: asgi.py  settings.py  urls.py  wsgi.py
core/: custom_graphql_view.py  forms.py  middleware.py  models.py  schema.py  tests.py  views.py
core/management/commands/: create_user_permission.py
core/migrations/: 0001_initial.py
scripts/: entrypoint.sh
templates/: index.html  login.html
