[tool.poetry]
name = "graphqlexample"
version = "0.1.0"
description = ""
authors = ["sergei <rangetopx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
graphene-django = "^3.2.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
